# Andinobot

./: .coderabbit.yml
Andinobot_base/: Andinobot_hardware.xml  CMakeLists.txt  package.xml
Andinobot_base/include/Andinobot_base/: Andinobot_hardware.hpp  DEV_Config.h  Debug.h  MotorDriver.h  esp32_bridge.h  motor_encoder.h
Andinobot_base/src/: Andinobot_hardware.cpp  DEV_Config.c  MotorDriver.c  esp32_bridge.c  motor_encoder.c  wheel.cpp
